[package]
name = "rust-test-crate-divide"
version = "0.1.0"
edition = "2021"
authors = ["Andy Lee <andyjinseoklee@gmail.com>"]
rust-version.workspace = true
description = "Test rust package"
homepage = "https://github.com/andyjslee/rust-test-crate"
repository = "https://github.com/andyjslee/rust-test-crate"
documentation = "https://docs.rs/rust-test-crate-divide"