[package]
name = "rust-test-crate"
version = "0.1.0"
edition = "2021"
authors = ["Andy Lee <andyjinseoklee@gmail.com>"]
rust-version.workspace = true
description = "Test rust package"
homepage = "https://github.com/andyjslee/rust-test-crate"
repository = "https://github.com/andyjslee/rust-test-crate"
documentation = "https://docs.rs/rust-test-crate"
license = "MIT"

[dependencies]
rust-test-crate-add = { path = "../rust-test-crate-add", version = "0.1.0" }
rust-test-crate-divide = { path = "../rust-test-crate-divide", version = "0.1.0" }
rust-test-crate-multiply = { path = "../rust-test-crate-multiply", version = "0.1.0" }
clap = { version = "4.5.16", features = ["derive"] }
